--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
   "author": "GarvitThakral",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mysql2": "^3.12.0"
   }
 }
