--- a/node_with_sql/package.json
+++ b/node_with_sql/package.json
@@ -16,6 +16,7 @@
     "method-override": "^3.0.0",
     "mysql2": "^3.12.0",
     "mysql4": "^1.7.0",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "uuid4": "^2.0.3"
   }
 }
